LogIn side næsten done ( mangler header )

--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -1,15 +1,26 @@
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+h1{
+    margin: 1.5rem 0 1.5rem 0;
+    text-align: center;
+    font-weight: normal;
+}
+
+
 /* Styling the login form container */
 .generic-form {
     width: 300px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #f2f2f2;
+    /*background-color: #F0EFF0;*/
     border-radius: 5px;
 }
 
 /* Styling the form elements */
-.generic-form input[type="text"],
-.generic-form input[type="password"] {
+.generic-form input[type="text"], .generic-form input[type="password"] {
     width: 100%;
     padding: 10px;
     margin: 5px 0;
@@ -18,22 +29,10 @@
     box-sizing: border-box;
 }
 
-/* Styling the submit button */
-.generic-form button[type="submit"] {
-    width: 100%;
-    background-color:#421064;
-    color: white;
-    padding: 10px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
 
 /* Styling the submit button on hover */
 .generic-form button[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: #AC58E4;
 }
 
 /* Styling error message */
@@ -42,3 +41,33 @@
     margin-top: 5px;
     font-size: 14px;
 }
+
+.signUp_LogOut {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.generic-form button[type="submit"] {
+    background-color:#421064;
+    color: white;
+    padding: 10px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+
+.signUp{
+    width: 60%;
+}
+.logOut{
+    width: 35%;
+}
+
+.logIn{
+    width: 100%;
+}
+
