--- a/src/main/resources/templates/orderpage.html
+++ b/src/main/resources/templates/orderpage.html
@@ -6,13 +6,11 @@
     <link href="../public/css/orderpagestyles.css" th:href="@{/css/styles.css}" rel="stylesheet"/>
 </head>
 
-<div class="page">
-    <header>
+    <header class="page">
         <a href="../index.html" th:href="@{/}">
             <img alt="logo" src="../public/images/headerimage.png" th:src="@{/images/lifehacklogo.png}"/>
         </a>
     </header>
-</div>
 
 
 <body>
