--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>LogIn page</title>
+    <link href="../public/css/loginpage.css" th:href="@{/css/loginpage.css}" rel="stylesheet">
     <link href="../public/css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet"/>
 </head>
 <body>
