--- a/src/main/resources/templates/checkOutPage.html
+++ b/src/main/resources/templates/checkOutPage.html
@@ -6,7 +6,15 @@
     <link href="../public/css/styles.css"  th:href="@{/css/styles.css}" rel="stylesheet">
     <link href="../public/css/checkoutpage.css"  th:href="@{/css/checkoutpage.css}" rel="stylesheet">
 </head>
+
 <body>
+
+    <header class="page">
+        <a href="../index.html" th:href="@{/}">
+            <img alt="logo" src="../public/images/CupcakeLogo.png" th:src="@{/images/CupcakeLogo.png}"/>
+            <img alt="logo" src="../public/images/headerimage.png" th:src="@{/images/lifehacklogo.png}"/>
+        </a>
+    </header>
 
     <div class="top">
         <a href="../index.html">Homepage</a>
