--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
 
     <header class="page">
         <a href="../index.html" th:href="@{/}">
+            <img alt="logo" src="../public/images/CupcakeLogo.png" th:src="@{/images/CupcakeLogo.png}"/>
             <img alt="logo" src="../public/images/headerimage.png" th:src="@{/images/lifehacklogo.png}"/>
         </a>
     </header>
