--- a/src/main/resources/public/css/checkoutpage.css
+++ b/src/main/resources/public/css/checkoutpage.css
@@ -1,5 +1,5 @@
 main{
-    width: 450px;
+    width: 500px;
     margin: auto;
     display: flex;
     justify-content: center;
@@ -8,7 +8,7 @@ main{
 }
 
 .item-container{
-    width: 100%;
+    width: 85%;
     padding: 0 2rem 1rem 2rem;
     border-bottom: #f2f2f2 solid 2px;
 }
@@ -42,4 +42,23 @@ main{
     align-items: center;
     justify-content: space-between;
     margin: 0.2rem 0 0.2rem 0;
+}
+
+/* ----- button -----*/
+
+button[type="submit"]:hover {
+    background-color: #AC58E4;
+}
+
+button[type="submit"] {
+    width: 100px;
+    background-color:#421064;
+    color: white;
+    padding: 10px 20px;
+    margin: 1rem 0;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    align-self: end;
 }
