--- a/src/main/resources/templates/checkOutPage.html
+++ b/src/main/resources/templates/checkOutPage.html
@@ -58,7 +58,7 @@
 
         </div>
 
-        <button type="submit"> Betal </button>
+        <button type="submit" formmethod=""> Betal </button>
     </main>
 
 </body>
