--- a/src/main/resources/public/css/orderpagestyles.css
+++ b/src/main/resources/public/css/orderpagestyles.css
@@ -2,7 +2,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/*-------------- HEADER -------------*/
+/*-------------- HEADER + MEDIA-------------*/
 
 header {
     display: flex;
@@ -10,6 +10,19 @@ header {
     border: 0px;
     background-color: #421064;
 }
+
+header img {
+    max-width: 100%;
+    flex: 0 0 auto;
+}
+
+@media (max-width: 1200px) {
+    header img {
+        width: auto;
+        max-width: 50%;
+    }
+}
+
 
 /*------------- UPPER BODY -----------*/
 
@@ -38,7 +51,7 @@ header {
     padding: 20px;
     font-size: 15px;
 
-    .email{
+    .email {
         padding-right: 20px;
     }
 
@@ -53,6 +66,8 @@ header {
 /*------------- MAIN BODY -------------*/
 
 .main-container {
+    display: flex;
+    flex-direction: column;
     background-color: #F5F5F5;
     padding: 10px;
     margin: 15px 0px 15px 0px;
@@ -72,11 +87,32 @@ header {
     }
 }
 
-.cupcake-form{
+.form-container{
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 20px;
 }
 
+.dropdown-menu select{
+    margin: 0 auto;
+    border: none;
+    padding: 10px 50px 10px 10px;
+    border-radius: 4px;
+}
+
+select {
+    appearance: none;
+    background-image: url("../images/dropdownarrow.svg");
+    background-repeat: no-repeat;
+    background-position: right 0.7rem top 50%;
+    background-size: 0.65rem auto;
+}
+
+.btn{
+    display: flex;
+    align-self: end;
+}
 
 /*---------------- GENERAL STYLES ------------------*/
 
@@ -86,29 +122,4 @@ header {
     padding: 20px;
     background-color: #f2f2f2;
     border-radius: 5px;
-}
-
-/* Styling the submit button */
-.generic-form button[type="submit"] {
-    width: 50%;
-    background-color: #421064;
-    color: white;
-    padding: 10px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-/* Styling the submit button on hover */
-.generic-form button[type="submit"]:hover {
-    background-color: #9966ff;
-}
-
-/* Styling error message */
-.generic-form .error {
-    color: red;
-    margin-top: 5px;
-    font-size: 14px;
 }
