--- a/src/main/resources/templates/orderpage.html
+++ b/src/main/resources/templates/orderpage.html
@@ -23,7 +23,7 @@
     </div>
     <div class="right-side-content">
         <p class="email">e-mail here</p>
-        <img class="basket-image" alt="basket" src="../public/images/basket.png">
+        <img class="" alt="basket" src="../public/images/basket.svg">
     </div>
 </div>
 
