--- a/src/main/resources/templates/userViewPage.html
+++ b/src/main/resources/templates/userViewPage.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 
-  <header class="page">
+  <header class="global-header">
     <a href="../index.html" th:href="@{/}">
       <img alt="logo" src="../public/images/CupcakeLogo.png" th:src="@{/images/CupcakeLogo.png}"/>
-      <img alt="logo" src="../public/images/headerimage.png" th:src="@{/images/lifehacklogo.png}"/>
     </a>
+    <img class="cupcakelogo" alt="logo" src="../public/images/headerimage.png" th:src="@{/images/headerimage.png}"/>
   </header>
 
-  <div class="top">
+  <div class="top-section">
     <a href="../index.html">Homepage</a>
     <p>( user )</p>
   </div>
