global top-section styling + different top section view depending on user_role + header fixes

--- a/src/main/resources/public/css/orderpagestyles.css
+++ b/src/main/resources/public/css/orderpagestyles.css
@@ -7,7 +7,7 @@
 header {
     display: flex;
     justify-content: center;
-    border: 0px;
+    border: 0;
     background-color: #421064;
 }
 
@@ -25,7 +25,7 @@ header img {
 
 
 /*------------- UPPER BODY -----------*/
-
+/*
 .upper-container {
     display: flex;
     justify-content: space-between;
@@ -61,7 +61,7 @@ header img {
         border-radius: 8px;
     }
 }
-
+*/
 
 /*------------- MAIN BODY -------------*/
 
@@ -70,7 +70,7 @@ header img {
     flex-direction: column;
     background-color: #F5F5F5;
     padding: 10px;
-    margin: 15px 0px 15px 0px;
+    margin: 8px 0 8px 0;
 }
 
 .main-container-text {
