--- a/src/main/resources/public/css/loginpage.css
+++ b/src/main/resources/public/css/loginpage.css
@@ -26,7 +26,7 @@ h1{
 
 
 /* Styling the submit button on hover */
-.generic-form button[type="submit"]:hover {
+.generic-form button[type="submit"]:hover, .generic-form button:hover {
     background-color: #AC58E4;
 }
 
@@ -43,7 +43,7 @@ h1{
     justify-content: space-between;
 }
 
-.generic-form button[type="submit"] {
+.generic-form button {
     background-color:#421064;
     color: white;
     padding: 10px 20px;
