--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -53,7 +53,7 @@
 /* ----- buttons ----- */
 
 .btn[type="submit"], .btn {
-    background-color: #AC58E4;
+    background-color: #3E8CCD;
 }
 
 .btn[type="submit"], .btn {
