--- a/src/main/resources/templates/orderpage.html
+++ b/src/main/resources/templates/orderpage.html
@@ -21,14 +21,14 @@
             <a class="customers-href" href="customers.html">Kunder</a>
         </div>
         <div class="right-side-content">
-            <p class="email">e-mail here</p>
+            <p class="email" th:text="${currentUserName}">e-mail </p>
             <img class="" alt="basket" src="../public/images/basket.svg" th:src="@{/images/basket.svg}">
         </div>
     </div>
 
     <div class="top-section"  th:if="${session.currentUser.user_role == 'user' || session.currentUser.user_role == 'null'}">
         <div class="left-side-content">
-            <p class="email" th:if="${session.currentUser.user_name}">username</p>
+            <p class="email" th:text="${currentUserName}">username</p>
         </div>
         <div class="right-side-content">
             <img class="" alt="basket" src="../public/images/basket.svg" th:src="@{/images/basket.svg}">
